<resources>
    <string name="app_name">Muli pati? - agent</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="illustration">illustration</string>
    <string name="find_customers_easily">Find customers easily</string>
    <string name="post_your_trip_to_reach_out_to_people_around_you">Post your trip to reach out to people around you</string>
    <string name="get_started">Get started</string>
    <string name="create_account">Create Account</string>
    <string name="icon">icon</string>
    <string name="dot">dot</string>
    <string name="not_set">Not set</string>
    <string name="mw_extension">, Malawi</string>
    <string name="map_key">AIzaSyARXRQgvEWqc4hhoHq_WOPQwjRxDfijVm0"</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="default_notification_channel_id">Muli pati agent</string>
    <string name="already_registered">Already Registered?</string>
    <string name="sign_in">Sign in.</string>
    <string name="select_plan">Choose a pricing plan</string>
    <string name="silver">Silver</string>
    <string name="mk1_000">MK1,000</string>
    <string name="month">/ month</string>
    <string name="subscribe_to_service">Subscribe to service</string>
    <string name="bronze">Bronze</string>
    <string name="mk_2000">MK, 2000</string>
    <string name="gold">Gold</string>
    <string name="mk_5_000">MK 5,000</string>
    <string name="the_golden_rule_of_super_ants_is_location_please_enable_location_to_get_your_services">The golden rule of super ants is location. Please enable location to get your services.</string>
    <string name="silver_plan">Silver plan</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="image">image</string>
    <string name="app_settings">App settings</string>
    <string name="log_out">Log out</string>
    <string name="dots">dots</string>
    <string name="jerome_msapha">Jerome Msapha</string>
    <string name="phone_no">+265 999 67 99 75</string>
    <string name="personal_infomation">Personal infomation</string>
    <string name="your_location_email_address_status">Your location, email address, status</string>
    <string name="general">General</string>
    <string name="driver_catalogue">Driver catalogue</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="contact_and_support">Contact and support</string>
    <string name="your_trips">Your trips</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_trip">Add trip</string>
    <string name="trip_details">Details</string>
    <string name="amount_in_kwacha">Amount in kwacha</string>
    <string name="fare_per_passenger">Fare per passenger:</string>
    <string name="car_type">Car type</string>
    <string name="select_from_dropdown">Select from dropdown:</string>
    <string name="pick_up_place">Pick up place:</string>
    <string name="kameza_round_about">Kameza round about</string>
    <string name="viewed">Viewed</string>
    <string name="recent">Recent</string>
    <string name="notifications">Notifications</string>
    <string name="permanently_delete_this_account">Permanently delete this account</string>
    <string name="account_deactivation">Account deactivation</string>
    <string name="blantyre_malawi">Blantyre, Malawi</string>
    <string name="location">Location</string>
    <string name="_265_999_67_99_75">+265 999 67 99 75</string>
    <string name="phone_number">Phone number</string>
    <string name="jmsampha_mulipati_com">jmsampha@mulipati.com</string>
    <string name="email_address">Email address</string>
    <string name="user_details">User details</string>
    <string name="_15">15</string>
    <string name="cancelled">Cancelled</string>
    <string name="_3">3</string>
    <string name="completed">Completed</string>
    <string name="upcoming">Upcoming</string>
    <string name="personal_info">Personal info</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="reset_subscription">Reset subscription</string>
    <string name="upgrade_plan">Upgrade plan</string>
    <string name="plan_benefits">Plan benefits</string>
    <string name="unlimited_customers_in_your_reach">Unlimited customers in your reach</string>
    <string name="secure_interaction">Secure interaction</string>
    <string name="_24_7_service_support">24/7 service support</string>
    <string name="post_10_rides_per_day">Post 10 rides per day</string>
    <string name="per_month">Per month</string>
    <string name="mk1_000_00_in_advance">MK1,000.00 in advance</string>
    <string name="per_6_month">Per 6 month</string>
    <string name="mk6_000_00_in_advance">MK6,000.00 in advance</string>
    <string name="per_year">Per year</string>
    <string name="mk12_000_00_in_advance">MK12,000.00 in advance</string>
    <string name="theme">Theme</string>
    <string name="toggle_dark_theme">Toggle dark theme</string>
    <string name="allow_phone_to_receive_notifications">Allow phone to receive notifications</string>
    <string name="contact_amp_support"><![CDATA[Contact & support]]></string>
    <string name="_12_30_pm">12:30 PM</string>
    <string name="write_your_message_here">Write your message here</string>
    <string name="well_l_was_supposed_to">Well l was supposed to</string>
    <string name="hello_can_we_help_you">Hello, can we help you</string>
    <string name="yesterday">Yesterday</string>
    <string name="terms_conditions"><![CDATA[Terms & conditions]]></string>
    <string name="store">Store</string>
    <string name="google_playstore">Google PlayStore</string>
    <string name="driver_app">Driver app</string>
    <string name="user_app">User app</string>
    <string name="by_creating_an_account_you_agree_to_all_the_terms_and_conditions_of_muli_pati_mobile_transportation_service_drivers_should_register_to_our_service_using_the_muli_pati_driver_app">By creating an account, you agree to all the terms and conditions of Muli pati mobile transportation service. Drivers should register to our service using the Muli pati driver app.</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="about">About</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="muli_pati_mobile_transport_service_is_a_malawian_transportation_system_it_offers_users_transport_from_trips_going_on_around_their_area_of_proximity">Muli pati mobile transport service is a malawian transportation system. It offers users transport from trips going on around their area of proximity.</string>
    <string name="muli_pati">Muli pati?</string>
    <string name="continue_">Continue</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="send_sms">Send SMS</string>
    <string name="enter_your_phone_number_below_we_will_send_you_an_sms_with_a_pin_code_to_confirm_your_identity">Enter your phone number below. We will send you an SMS with a pin code to confirm your identity.</string>
    <string name="confirm">Confirm</string>
    <string name="enter_the_pin_code_sent_to_your_mobile_phone">Enter the pin code sent to your mobile phone.</string>
    <string name="reset_password">Reset password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="current_avatar">Current avatar</string>
    <string name="update_your_personal_details">Update your personal details</string>
    <string name="finish">Finish</string>
    <string name="ride_start">Ride start:</string>
    <string name="add_this_trip">Add this trip</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="verification">Verification</string>
    <string name="fill_the_fields_below_to_add_a_trip">Fill the fields below to add a trip</string>
    <string name="asterisk">*</string>
    <string name="cred">Use my Muli pati? - agent user credentials</string>
    <string name="cred_banner">Add trip agent name, profile picture</string>
    <string name="details_of_trip">Details of trip</string>
    <string name="enter_the_details_of_your_trip">Enter the details of your trip</string>
    <string name="all_fields_are_required">All fields are required</string>
    <string name="enter_your_start_location">Enter your start location</string>
    <string name="show_preview">Show preview</string>
    <string name="enter_your_destination">Enter your destination</string>
    <string name="pricing">Pricing</string>
    <string name="enter_the_price_that_you_will_charge_a_passenger">Enter the price that you will charge a passenger</string>
    <string name="enter_the_amount_in_malawian_kwacha">Enter the amount in Malawian kwacha</string>
    <string name="ride">Ride</string>
    <string name="enter_your_ride_details">Enter your ride details</string>
    <string name="pick_up_location">Pick up location</string>
    <string name="click_here_to_set">Click here to set</string>
    <string name="start_time">Start time:</string>
    <string name="number_of_passengers">Number of passengers</string>
    <string name="car_specifications">Car specifications</string>
    <string name="_4_passengers">4 Passengers</string>
    <string name="car__">Mazda Demio</string>
    <string name="rjnrgjng">Wed, Feb 10, 10:50 AM</string>
    <string name="lorem_ipsum">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat sit sunt maxime reprehenderit natus non soluta, dolorem cumque, dolorum incidunt corrupti quidem rerum repudiandae delectus quos aut! In, harum? Praesentium?</string>
    <string name="booking_approved">Booking approved!</string>
    <string name="summary">Summary</string>
    <string name="blantyre_to_zomba_trip">Blantyre to Zomba trip</string>
    <string name="feb">12th February 2021</string>
    <string name="mazda_demio">Mazda demio</string>
    <string name="mk500_per_passenger">MK500 per passenger</string>
    <string name="trip_added_successfully">Trip added successfully!</string>
    <string name="records">No records available</string>
    <string name="_4">4</string>
    <string name="fcgvhbjn">Jerome Msampha</string>
    <string name="wed">Wed</string>
    <string name="location_blantyre">Location: Blantyre</string>
    <string name="see_all_3">See All ()</string>
    <string name="bookings">Bookings</string>
    <string name="fkfbi4kgk4">Location: Blantyre</string>
    <string name="see_all_8">See All ()</string>
    <string name="keep_your_location_up_to_date">Keep your location up to date</string>
    <string name="frfrfrfefe">Banda\'s trip</string>
    <string name="trialss">0 passengers | 3 remaining</string>
    <string name="active_trips">Active trips</string>
    <string name="no_bookings_present">No bookings present</string>
    <string name="you_have_no_active_trips">You have no active trips</string>
    <string name="allow_app_to_use_location">Allow app to use location</string>
    <string name="enable_location_service">Enable location service</string>
    <string name="do_not_allow">Do not allow</string>
    <string name="access_your_location">Access your location</string>
    <string name="update_trip_details">Update trip details</string>
    <string name="timen">10:00PM</string>
    <string name="start_typing">Start typing...</string>
    <string name="payment">Payment</string>
    <string name="continue_to_sign_in">Continue to sign in</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="_8">8</string>
    <string name="_0">0</string>
    <string name="get_ratings">Get ratings</string>
    <string name="more_rating_attracts_customers_to_book_your_trips">More rating attracts customers to book your trips</string>
    <string name="profile_information">Profile information</string>
</resources>