<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.trip.VerificationFragment">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verification"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_margin="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fill_the_fields_below_to_add_a_trip"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginStart="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_information"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginStart="20dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asterisk"
                    android:textColor="?tabIndicatorColor"
                    android:layout_alignParentEnd="true"
                    tools:ignore="RelativeOverlap" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cred_banner"
                    />
                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cred"
                    android:background="@drawable/rounded_white"
                    android:padding="8dp"
                    android:textColor="#969696"
                    android:layout_marginTop="25dp"
                    android:id="@+id/getUserCred"
                    />
            </RelativeLayout>


        </LinearLayout>
    </ScrollView>

</layout>