<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="?colorOnPrimary"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/summary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="@color/grey"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_map_marker_distance"
            android:contentDescription="@string/icon" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blantyre_to_zomba_trip"
            android:id="@+id/tripRoute"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_calendar_clock"
            android:contentDescription="@string/icon" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feb"
            android:id="@+id/tripDate"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_car_connected"
            android:contentDescription="@string/icon" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mazda_demio"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_monetization"
            android:contentDescription="@string/icon" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mk500_per_passenger"
            android:id="@+id/summaryPrice"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp" />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:text="@string/continue_"
        android:textAllCaps="false"
        android:background="@drawable/button"
        android:textColor="@color/white"
        android:id="@+id/addTripFinish"
        android:layout_margin="10dp"
        />
</LinearLayout>