<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".onboard.ThirdSlider">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_started"
                android:layout_margin="10dp"
                android:padding="4dp"
                android:id="@+id/getStarted"
                android:textColor="@color/red"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <ImageView
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:src="@drawable/onboard_two"
            android:layout_marginTop="160dp"
            android:layout_gravity="center"
            android:id="@+id/firstImage"
            android:layout_marginBottom="70dp"
            android:contentDescription="@string/illustration" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_ratings"
            android:textSize="32sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_rating_attracts_customers_to_book_your_trips"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />
    </LinearLayout>

</layout>