<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.onboard.FirstSlider">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:src="@drawable/onboard_one"
            android:layout_marginTop="200dp"
            android:layout_gravity="center"
            android:id="@+id/firstImage"
            android:layout_marginBottom="100dp"
            android:contentDescription="@string/illustration" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_customers_easily"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_your_trip_to_reach_out_to_people_around_you"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />
    </LinearLayout>

</layout>