<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.trip.TripDetailsFragment">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_of_trip"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_margin="20dp"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_the_details_of_your_trip"
                android:layout_marginStart="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/all_fields_are_required"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asterisk"
                    android:textColor="@color/red"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@null"
                app:startIconDrawable="@drawable/ic_source_commit_start"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_stroked"
                    android:hint="@string/enter_your_start_location"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    android:id="@+id/tripStart"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@null"
                app:startIconDrawable="@drawable/ic_map_marker"
                android:layout_marginTop="10dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_stroked"
                    android:hint="@string/enter_your_destination"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    android:id="@+id/tripDestination"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@null"
                app:startIconDrawable="@drawable/ic_office_building_marker"
                android:layout_marginTop="10dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_stroked"
                    android:hint="@string/pick_up_location"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    android:id="@+id/tripPickUp"
                    />

            </com.google.android.material.textfield.TextInputLayout>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="50dp"
                    android:text="@string/show_preview"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="50dp" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_preview"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:id="@+id/showAPreview"
                    android:layout_marginEnd="20dp"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/image" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_bus_clock"
                    android:contentDescription="@string/icon" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_time"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/click_here_to_set"
                    android:textColor="@color/red"
                    android:id="@+id/setStartTime"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/showMap"
                android:visibility="gone"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    app:cardCornerRadius="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp">

                    <com.google.android.gms.maps.MapView
                        android:id="@+id/previewMap"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </androidx.cardview.widget.CardView>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_keyboard_arrow_up"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="20dp"
                        android:id="@+id/hidePreview"
                        android:layout_marginTop="7dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/icon" />
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>